tmp_output/src/ffi_bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SimpleHandle_t {
    _unused: [u8; 0],
}
#[doc = " Opaque handle type"]
pub type SimpleHandle = *mut SimpleHandle_t;
pub const SimpleStatus_SIMPLE_STATUS_SUCCESS: SimpleStatus = 0;
pub const SimpleStatus_SIMPLE_STATUS_ERROR_INVALID_ARGUMENT: SimpleStatus = 1;
pub const SimpleStatus_SIMPLE_STATUS_ERROR_OUT_OF_MEMORY: SimpleStatus = 2;
pub const SimpleStatus_SIMPLE_STATUS_ERROR_NOT_INITIALIZED: SimpleStatus = 3;
#[doc = " Status codes (error handling pattern)"]
pub type SimpleStatus = ::core::ffi::c_int;
unsafe extern "C" {
    #[doc = " RAII pattern: create/destroy"]
    pub fn simple_create(handle: *mut SimpleHandle) -> SimpleStatus;
}
unsafe extern "C" {
    pub fn simple_destroy(handle: SimpleHandle);
}
unsafe extern "C" {
    #[doc = " Operations on handle"]
    pub fn simple_process(handle: SimpleHandle, value: ::core::ffi::c_int) -> SimpleStatus;
}
unsafe extern "C" {
    pub fn simple_get_value(
        handle: SimpleHandle,
        out_value: *mut ::core::ffi::c_int,
    ) -> SimpleStatus;
}
unsafe extern "C" {
    pub fn simple_set_name(handle: SimpleHandle, name: *const ::core::ffi::c_char) -> SimpleStatus;
}
unsafe extern "C" {
    pub fn simple_get_name(
        handle: SimpleHandle,
        buffer: *mut ::core::ffi::c_char,
        buffer_size: ::core::ffi::c_int,
    ) -> SimpleStatus;
}
